scss/style.scss
@import 'o-colors/main';
@import 'o-fonts/main';
@import 'o-typography/main';

@include oFontsInclude(MetricWeb, light); // body
@include oFontsInclude(MetricWeb, $weight: light, $style: italic); // body
@include oFontsInclude(FinancierDisplayWeb); // headings
@include oFontsInclude(FinancierDisplayWeb, $weight: light, $style: italic); // standfirst

$page-width: 30em;

@mixin responsiveWidth($width: $page-width) {
	margin: 0 auto;
	max-width: $width;
}

body {
	@include oColorsFor(page, background);
	@include oTypographyBody;
}

main {
	@include oTypographyBodyWrapper;
	@include responsiveWidth;
}

.standfirst {
	@include oTypographyLead;
}

.main-header {
	margin-bottom: 1em;
	background: oColorsGetPaletteColor('grey-tint5');
	padding: .5em;

	.brand-logo {
		@include responsiveWidth(16em);
	}
}

